<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/pref_transport_title"
            android:key="pref_key_transport_settings">
        <EditTextPreference
                android:key="@string/netutils_tcp_port"
                android:title="@string/netutils_tcp_port_title"
                android:defaultValue="@string/netutils_tcp_port_default"/>
        <EditTextPreference
                android:key="@string/netutils_tcp_control_port"
                android:title="@string/netutils_tcp_control_port_title"
                android:defaultValue="@string/netutils_tcp_control_port_default"/>
        <EditTextPreference
                android:key="@string/netutils_mockets_port"
                android:title="@string/netutils_mockets_port_title"
                android:defaultValue="@string/netutils_mockets_port_default"/>
        <EditTextPreference
                android:key="@string/netutils_mockets_stream_port"
                android:title="@string/netutils_mockets_stream_port_title"
                android:defaultValue="@string/netutils_mockets_stream_port_default"/>
        <EditTextPreference
                android:key="@string/netutils_udp_port"
                android:title="@string/netutils_udp_port_title"
                android:defaultValue="@string/netutils_udp_port_default"/>
        <SwitchPreference
                android:key="@string/netutils_udp_multicast_enabled"
                android:title="@string/netutils_udp_multicast_enabled_title"
                android:defaultValue="@string/netutils_udp_multicast_enabled_default"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_discovery_title"
            android:key="pref_key_discovery_settings">
        <ListPreference
                android:key="@string/aci_groupmanager_netIFs"
                android:title="@string/aci_groupmanager_netIFs_title"
                android:dialogTitle="@string/aci_groupmanager_netIFs_dialog"
                android:entries="@array/pref_protocol_array_entries"
                android:entryValues="@array/pref_protocol_array_entries"
                android:defaultValue="@string/aci_groupmanager_netIFs_default" />
        <EditTextPreference
                android:key="@string/aci_groupmanager_port"
                android:title="@string/aci_groupmanager_port_title"
                android:defaultValue="@string/aci_groupmanager_port_default"/>
        <EditTextPreference
                android:key="@string/aci_groupmanager_ping_hopcount"
                android:title="@string/aci_groupmanager_ping_hopcount_title"
                android:defaultValue="@string/aci_groupmanager_ping_hopcount_default"/>
        <EditTextPreference
                android:key="@string/aci_groupmanager_ping_interval"
                android:title="@string/aci_groupmanager_ping_interval_title"
                android:defaultValue="@string/aci_groupmanager_ping_interval_default"/>
        <EditTextPreference
                android:key="@string/aci_groupmanager_info_interval"
                android:title="@string/aci_groupmanager_info_interval_title"
                android:defaultValue="@string/aci_groupmanager_info_interval_default"/>
    </PreferenceCategory>
</PreferenceScreen>